<resources>
    <string name="app_name">Customer application</string>
    <string name="customer">Customer</string>
    <string name="shopkeeper">shopkeeper</string>
    <string name="cussignup">customersignup</string>
    <string name="shopsignup">shopkeepersignup</string>
    <string name="mail_id">Email Id</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="customersignup">SIGN UP</string>
    <string name="shopkeepsignup">SIGN UP</string>
    <string name="mail_idshop">Mail Id</string>
    <string name="user_id_shop">User Id</string>
    <string name="shopkeeper_signup">SHOPKEEPER SIGNUP</string>
    <string name="customer_signup">CUSTOMER SIGNUP</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user_firstpage">user_firstpage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_customerfistpage">SMART SHOPPING</string>
    <string name="title_activity_shopkeeperfirstpage">shopkeeperfirstpage</string>
    <string name="re_type_password">Re-Type password</string>
    <string name="todo">TODO</string>
    <string name="title_activity_view_item">SMART SHOPPING</string>
    <string name="title_activity_view_map">Map</string>
    <string name="title_activity_maps">Map</string>

</resources>